@@ -438,7 +438,7 @@ void SHA256_Transform(SHA256_CTX* context, const sha2_word32* data) {
 
 #else /* SHA2_UNROLL_TRANSFORM */
 
-void SHA256_Transform(SHA256_CTX* context, const sha2_word32* data) {
+void SHA256_Transform(SHA256_CTX* context, const sha2_word32* data) { // #nocov
 #if 0  
 	sha2_word32	a, b, c, d, e, f, g, h, s0, s1;
 	sha2_word32	T1, T2, *W256;
@@ -516,11 +516,11 @@ void SHA256_Transform(SHA256_CTX* context, const sha2_word32* data) {
 	/* Clean up */
 	a = b = c = d = e = f = g = h = T1 = T2 = 0;
 #endif
-}
+}										// #nocov
 
 #endif /* SHA2_UNROLL_TRANSFORM */
 
-void SHA256_Update(SHA256_CTX* context, const sha2_byte *data, size_t len) {
+void SHA256_Update(SHA256_CTX* context, const sha2_byte *data, size_t len) {	// #nocov
 #if 0  
 	unsigned int	freespace, usedspace;
 
@@ -568,9 +568,9 @@ void SHA256_Update(SHA256_CTX* context, const sha2_byte *data, size_t len) {
 	/* Clean up: */
 	usedspace = freespace = 0;
 #endif
-}
+}										// #nocov
 
-void SHA256_Final(sha2_byte digest[], SHA256_CTX* context) {
+void SHA256_Final(sha2_byte digest[], SHA256_CTX* context) {			// #nocov
 #if 0  
 	sha2_word32	*d = (sha2_word32*)digest;
 	unsigned int	usedspace;
@@ -634,7 +634,7 @@ void SHA256_Final(sha2_byte digest[], SHA256_CTX* context) {
 	MEMSET_BZERO(context, sizeof(SHA256_CTX));
 	usedspace = 0;
 #endif
-}
+}									// #nocov
 
 char *SHA256_End(SHA256_CTX* context, char buffer[]) { /* #nocov start */ 
 	sha2_byte	digest[SHA256_DIGEST_LENGTH], *d = digest;
@@ -671,7 +671,7 @@ char* SHA256_Data(const sha2_byte* data, size_t len, char digest[SHA256_DIGEST_S
 /*** SHA-512: *********************************************************/
 void SHA512_Init(SHA512_CTX* context) {
 	if (context == (SHA512_CTX*)0) {
-		return;
+		return;								// #nocov
 	}
 	MEMCPY_BCOPY(context->state, sha512_initial_hash_value, SHA512_DIGEST_LENGTH);
 	MEMSET_BZERO(context->buffer, SHA512_BLOCK_LENGTH);
