@@ -1,3 +1,11 @@
+2017-01-01  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/sha1.R (sha1.anova): Added more #nocov marks
+	* src/sha2.c (SHA256_Transform): Idem
+
+	* tests/AESTest.R (hextextToRaw): Print AES object
+	* tests/AESTest.Rout.save: Updated
+
 2016-12-08  Dirk Eddelbuettel  <edd@debian.org>
 
 	* NAMESPACE: Register (and exported) makeRaw S3 methods
